# c300_jwt_auth

./: .dev.env  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/authorization/: apps.py  authentication.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  user_service.py  views.py
app/authorization/migrations/: 0001_initial.py  0002_alter_userdata_email.py  0002_userdata_get_access_date.py  0003_alter_userdata_name.py  0003_tenantprofile_rooms_userdata_old_numbers.py  0004_alter_tenantprofile_surname_and_more.py  0004_remove_userdata_username.py  0005_remove_userdata_name.py  0006_alter_userdata_number_alter_userdata_type.py  0007_alter_userdata_type.py  0008_alter_userdata_first_name_alter_userdata_last_name.py  0009_organizationprofile_remove_userdata_first_name_and_more.py
app/authorization/models/: __init__.py  area.py  base_profiles.py  company_profile.py  house_data.py  houses.py  owner_area.py  permissions_models.py  profiles.py  tenant_profile.py  user_data.py  worker_profile.py
app/authorization/services/: company_service.py  email_service.py  house_service.py  secure.py  user_service.py
app/authorization/tests/: base_testcase.py  test_account_view.py  test_accounts.py
app/authorization/views/: account.py  auth.py  (+5 more)
apps/authorization/: authentication.py  permissions.py  serializers.py  tasks.py  urls.py
config/: asgi.py  celery_app.py  faust_app.py  logging_config.py  settings.py  swagger.py  urls.py  wsgi.py
(+38 files in other folders)
